components/platform/schema-registry/overlays/dev/patch-scale-down.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: zylos-infra-kafka
spec:
  replicas: 1
  template:
    spec:
      automountServiceAccountToken: false
      containers:
        - name: schema-registry
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
              ephemeral-storage: 100Mi
            limits:
              cpu: 250m
              memory: 384Mi
              ephemeral-storage: 250Mi
