components/platform/schema-registry/overlays/dev/schema-registry-ha-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: zylos-infra-kafka
spec:
  replicas: 2
  template:
    spec:
      automountServiceAccountToken: false
      containers:
        - name: schema-registry
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
              ephemeral-storage: 500Mi
            limits:
              cpu: 500m
              memory: 768Mi
              ephemeral-storage: 1Gi
