components/platform/schema-registry/overlays/dev/netpol-schema-registry.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zylos-schema-registry-netpol
  namespace: zylos-data-kafka
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: schema-registry
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # ALLOW TENANTS & KAFKA CONNECT INGRESS
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: zylos-services
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: zylos-kafka-connect
      ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 15008

  egress:
    # ALLOW EGRESS TO KAFKA BROKERS
    - to:
        - podSelector:
            matchLabels:
              strimzi.io/cluster: zylos-kafka
      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 15008
